# aspen-note

./: index.html  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/app_module/: app.rs
src-tauri/src/cache_module/: file.rs
src/components/TakeNote/: TakeNoteComponent.tsx  props.d.ts  style.ts  type.d.ts
src/components/TakeNote/Catalogue/: TakeNoteCataLogueComponent.tsx  TakeNoteCataLogueItemComponent.tsx  TakeNoteCataLogueTitleComponent.tsx  TakeNoteCatalogueComponent.tsx  TakeNoteCatalogueEditComponent.tsx  TakeNoteCatalogueItemComponent.tsx  TakeNoteCatalogueTitleComponent.tsx  TakeNoteSettingModal.tsx
src/components/TakeNote/Content/: TakeNoteContentComponent.tsx  TakeNoteNoneContentComponent.tsx  TakeNotePreviewContentComponent.tsx
src/components/TakeNote/Menu/: TakeNoteMenuComponent.tsx  TakeNoteMenuItemComponent.tsx  TakeNoteSearchComponent.tsx
src/redux/: store.ts
src/redux/slice/: sidebar.ts  user.ts
src/redux/types/: sidebar.d.ts  user.d.ts
