[package]
name = "aspen-notion"
version = "0.0.1"
description = "文件记事本"
authors = ["Aspen Soung <songyang410@outlook.com>"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-unminimize", "window-start-dragging", "window-show", "window-minimize", "window-hide", "window-maximize", "window-unmaximize", "window-close", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
